--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -51,3 +51,5 @@ Style/HashTransformKeys:
   Enabled: false
 Style/HashTransformValues:
   Enabled: false
+Metrics/ParameterLists:
+  Enabled: false
