--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -21,6 +21,8 @@ Metrics/BlockLength:
 Metrics/CyclomaticComplexity:
   Enabled: false
 
+Style/ClassVars:
+  Enabled: false
 Style/Documentation:
   Enabled: false
 Style/ClassAndModuleChildren:
